Check length of longest ORF in sequences instead.

--- a/Notebooks/GenCode_Explore_205.ipynb
+++ b/Notebooks/GenCode_Explore_205.ipynb
@@ -325,6 +325,93 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uW3vk_W7NSKr"
+      },
+      "source": [
+        "###Identify sequences with longest ORF length less than or equal to 0\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e_Gw5oEKOzc2"
+      },
+      "source": [
+        "def identify_sequences_in_max_orf_len_threshold(data, max_orf_len_threshold):\n",
+        "  oc = ORF_counter()\n",
+        "  for i in range(0, len(data)):\n",
+        "    seq = data.iloc[i]\n",
+        "    oc.set_sequence(seq['sequence'])\n",
+        "    max_orf_len = oc.get_max_orf_len()\n",
+        "    if max_orf_len <= max_orf_len_threshold:\n",
+        "      print(seq)\n",
+        "      print(\"Max ORF length =\", max_orf_len)\n",
+        "      print()\n",
+        "\n",
+        "def count_sequences_in_max_orf_len_threshold(data, max_orf_len_threshold):\n",
+        "  oc = ORF_counter()\n",
+        "  sequences = data['sequence'].tolist()\n",
+        "  count = 0\n",
+        "  for seq in sequences:\n",
+        "    oc.set_sequence(seq)\n",
+        "    max_orf_len = oc.get_max_orf_len()\n",
+        "    if max_orf_len <= max_orf_len_threshold:\n",
+        "      count+=1\n",
+        "  print(\"Number of sequences with max ORF length within threshold of\", str(max_orf_len_threshold) + \":\", count)\n"
+      ],
+      "execution_count": 204,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w7-4WaAuNuMZ",
+        "outputId": "a9845862-0f94-422b-e7bf-eb312252a4c1"
+      },
+      "source": [
+        "print(\"mRNA:\")\n",
+        "count_sequences_in_max_orf_len_threshold(pcdf, 0)\n",
+        "print(\"lncRNA:\")\n",
+        "count_sequences_in_max_orf_len_threshold(ncdf, 0)\n",
+        "#print(\"mRNA Sequences with Longest ORF Length Less Than or Equal to 6:\")\n",
+        "#identify_sequences_of_max_orf_len_threshold(pcdf, 6)\n",
+        "\n",
+        "#print(\"lncRNA Sequences with Longest ORF Length Less Than or Equal to 6:\")\n",
+        "#identify_sequences_of_max_orf_len_threshold(ncdf, 6)"
+      ],
+      "execution_count": 205,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "mRNA:\n",
+            "Number of sequences with max ORF length within threshold of 0: 858\n",
+            "lncRNA:\n",
+            "Number of sequences with max ORF length within threshold of 0: 223\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PSCzG9bINWcN"
+      },
+      "source": [
+        "###Bin sequences by length\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "qudbA6e9HtON"
@@ -335,63 +422,6 @@
       ],
       "execution_count": 185,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "I-8f2uQeDO63"
-      },
-      "source": [
-        "###Make note of sequences of length less than or equal to 9"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "w7Skbrz9Da_A",
-        "outputId": "d541e704-85be-4684-8167-eb65c7b4c565"
-      },
-      "source": [
-        "print(\"mRNA Sequence with Length Less Than or Equal to 9:\")\n",
-        "for i in range(0, len(pcdf)):\n",
-        "  seq = pcdf.iloc[i]\n",
-        "  if seq['seqlen'] <= 9:\n",
-        "    print(seq)\n",
-        "  else:\n",
-        "    break #Break from loop since sequences are sorted by length\n",
-        "\n",
-        "print(\"lncRNA Sequence with Length Less Than or Equal to 9:\")\n",
-        "for i in range(0, len(ncdf)):\n",
-        "  seq = ncdf.iloc[i]\n",
-        "  if seq['seqlen'] <= 9:\n",
-        "    print(seq)\n",
-        "  else:\n",
-        "    break #Break from loop since sequences are sorted by length"
-      ],
-      "execution_count": 186,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "mRNA Sequence with Length Less Than or Equal to 9:\n",
-            "tid         ENST00000415118.1\n",
-            "class                       1\n",
-            "sequence             GAAATAGT\n",
-            "seqlen                      8\n",
-            "Name: 67578, dtype: object\n",
-            "tid         ENST00000434970.2\n",
-            "class                       1\n",
-            "sequence            CCTTCCTAC\n",
-            "seqlen                      9\n",
-            "Name: 67579, dtype: object\n",
-            "lncRNA Sequence with Length Less Than or Equal to 9:\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
