Filter out sequences of length less than 200 for counting sequences by longest ORF length.

--- a/Notebooks/GenCode_Explore_205.ipynb
+++ b/Notebooks/GenCode_Explore_205.ipynb
@@ -311,15 +311,17 @@
         "# This is a fast way to slice if you have length thresholds.\n",
         "# TO DO: choose length thresholds and apply to PC and NC RNA.\n",
         "# For example: 200, 400, 800, 1600, 3200, 6400 (e.g. 200-399, etc.)\n",
-        "mask = (ncdf['sequence'].str.len() < 1000)\n",
-        "subset = ncdf.loc[mask]\n",
+        "#mask = (ncdf['sequence'].str.len() < 1000)\n",
+        "#subset = ncdf.loc[mask]\n",
         "\n",
         "# Here is one way to extract a list from a dataframe. \n",
-        "mylist=subset['sequence'].tolist()\n",
+        "#mylist=subset['sequence'].tolist()\n",
         "\n",
-        "mask = (pcdf['sequence'].str.len() < 800)\n",
-        "subset = pcdf.loc[mask]\n",
-        "subset_list = subset['sequence'].tolist()"
+        "#mask = (pcdf['sequence'].str.len() < 800)\n",
+        "#subset = pcdf.loc[mask]\n",
+        "#subset_list = subset['sequence'].tolist()\n",
+        "\n",
+        "#TODO: filter out sequences less than 200 here?"
       ],
       "execution_count": 184,
       "outputs": []
@@ -345,25 +347,27 @@
         "  oc = ORF_counter()\n",
         "  for i in range(0, len(data)):\n",
         "    seq = data.iloc[i]\n",
-        "    oc.set_sequence(seq['sequence'])\n",
-        "    max_orf_len = oc.get_max_orf_len()\n",
-        "    if max_orf_len <= max_orf_len_threshold:\n",
-        "      print(seq)\n",
-        "      print(\"Max ORF length =\", max_orf_len)\n",
-        "      print()\n",
+        "    if len(seq['sequence']) > 200: #ensure sequences are greater than 200\n",
+        "      oc.set_sequence(seq['sequence'])\n",
+        "      max_orf_len = oc.get_max_orf_len()\n",
+        "      if max_orf_len <= max_orf_len_threshold:\n",
+        "        print(seq)\n",
+        "        print(\"Max ORF length =\", max_orf_len)\n",
+        "        print()\n",
         "\n",
         "def count_sequences_in_max_orf_len_threshold(data, max_orf_len_threshold):\n",
         "  oc = ORF_counter()\n",
         "  sequences = data['sequence'].tolist()\n",
         "  count = 0\n",
         "  for seq in sequences:\n",
-        "    oc.set_sequence(seq)\n",
-        "    max_orf_len = oc.get_max_orf_len()\n",
-        "    if max_orf_len <= max_orf_len_threshold:\n",
-        "      count+=1\n",
+        "    if len(seq) > 200: #ensure sequences are greater than 200\n",
+        "      oc.set_sequence(seq)\n",
+        "      max_orf_len = oc.get_max_orf_len()\n",
+        "      if max_orf_len <= max_orf_len_threshold:\n",
+        "        count+=1\n",
         "  print(\"Number of sequences with max ORF length within threshold of\", str(max_orf_len_threshold) + \":\", count)\n"
       ],
-      "execution_count": 204,
+      "execution_count": 208,
       "outputs": []
     },
     {
@@ -373,28 +377,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w7-4WaAuNuMZ",
-        "outputId": "a9845862-0f94-422b-e7bf-eb312252a4c1"
+        "outputId": "538f1013-e811-4473-e1a1-0ee5ffca892e"
       },
       "source": [
         "print(\"mRNA:\")\n",
-        "count_sequences_in_max_orf_len_threshold(pcdf, 0)\n",
+        "count_sequences_in_max_orf_len_threshold(pcdf, 6)\n",
         "print(\"lncRNA:\")\n",
-        "count_sequences_in_max_orf_len_threshold(ncdf, 0)\n",
+        "count_sequences_in_max_orf_len_threshold(ncdf, 6)\n",
         "#print(\"mRNA Sequences with Longest ORF Length Less Than or Equal to 6:\")\n",
         "#identify_sequences_of_max_orf_len_threshold(pcdf, 6)\n",
         "\n",
         "#print(\"lncRNA Sequences with Longest ORF Length Less Than or Equal to 6:\")\n",
         "#identify_sequences_of_max_orf_len_threshold(ncdf, 6)"
       ],
-      "execution_count": 205,
+      "execution_count": 209,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "mRNA:\n",
-            "Number of sequences with max ORF length within threshold of 0: 858\n",
+            "Number of sequences with max ORF length within threshold of 6: 775\n",
             "lncRNA:\n",
-            "Number of sequences with max ORF length within threshold of 0: 223\n"
+            "Number of sequences with max ORF length within threshold of 6: 195\n"
           ],
           "name": "stdout"
         }
