--- a/Notebooks/GenCode_Explore_205.ipynb
+++ b/Notebooks/GenCode_Explore_205.ipynb
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eDgS-z1tL6Q2",
-        "outputId": "e2d70fca-fb4e-4b15-97ea-17387d446800"
+        "outputId": "0c491c59-ac7e-4bd7-affe-de24844335eb"
       },
       "source": [
         "import time \n",
@@ -63,12 +63,12 @@
         "    print(s)\n",
         "show_time()"
       ],
-      "execution_count": 2,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-04 14:39:41 UTC\n"
+            "2021-06-04 15:47:27 UTC\n"
           ],
           "name": "stdout"
         }
@@ -81,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tckHr4SuL6Q5",
-        "outputId": "f0d930f9-8c3e-4867-dd02-fb685fdb907b"
+        "outputId": "a74a9b42-669e-4648-88a3-4243812836b1"
       },
       "source": [
         "import numpy as np\n",
@@ -114,13 +114,13 @@
         "if not assert_imported_RNA_describe():\n",
         "    print(\"ERROR: Cannot use RNA_describe.\")"
       ],
-      "execution_count": 3,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "On Google CoLab, mount cloud-local file, get our code from GitHub.\n",
-            "Mounted at /content/drive/\n"
+            "Drive already mounted at /content/drive/; to attempt to forcibly remount, call drive.mount(\"/content/drive/\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -135,7 +135,7 @@
         "PC_FILENAME='gencode.v38.pc_transcripts.fa.gz'\n",
         "NC_FILENAME='gencode.v38.lncRNA_transcripts.fa.gz'"
       ],
-      "execution_count": 4,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
         "    df=pd.concat((df1,df2,df3,df4),axis=1)\n",
         "    return df"
       ],
-      "execution_count": 5,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "        print(\"mean longest ORF length:\",int(mean_max_orf),\"+/-\",int(std_max_orf))\n",
         "    return mean_max_orf"
       ],
-      "execution_count": 6,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FwwunxFxL6Q-",
-        "outputId": "6b29107a-e6b7-4cae-9ddf-c0d7f076ef3c"
+        "outputId": "bc80d75a-574f-4f68-bd59-e51a3dd26003"
       },
       "source": [
         "PC_FULLPATH=DATAPATH+PC_FILENAME\n",
@@ -247,16 +247,16 @@
         "print(\"NC seqs loaded:\",len(ncdf))\n",
         "show_time()"
       ],
-      "execution_count": 7,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-04 14:40:01 UTC\n",
+            "2021-06-04 15:47:28 UTC\n",
             "PC seqs loaded: 106143\n",
-            "2021-06-04 14:40:07 UTC\n",
+            "2021-06-04 15:47:33 UTC\n",
             "NC seqs loaded: 48752\n",
-            "2021-06-04 14:40:09 UTC\n"
+            "2021-06-04 15:47:34 UTC\n"
           ],
           "name": "stdout"
         }
@@ -269,7 +269,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7iW7zf4pL6Q_",
-        "outputId": "f1c79d0e-475e-446d-f173-cd267daf74a4"
+        "outputId": "df3302cf-8b79-4787-adb5-6d2aa550d4cd"
       },
       "source": [
         "print(\"Sorting PC...\")\n",
@@ -277,7 +277,7 @@
         "print(\"Sorting NC...\")\n",
         "ncdf.sort_values('seqlen', ascending=True, inplace=True)"
       ],
-      "execution_count": 8,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,19 +287,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TbUk5m5xL6RB"
-      },
-      "source": [
-        "## Subset by RNA length\n",
-        "\n",
-        "---\n",
-        "\n",
-        "\n"
       ]
     },
     {
@@ -317,13 +304,9 @@
         "# Here is one way to extract a list from a dataframe. \n",
         "#mylist=subset['sequence'].tolist()\n",
         "\n",
-        "#mask = (pcdf['sequence'].str.len() < 800)\n",
-        "#subset = pcdf.loc[mask]\n",
-        "#subset_list = subset['sequence'].tolist()\n",
-        "\n",
         "#TODO: filter out sequences less than 200 here?"
       ],
-      "execution_count": 9,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -332,7 +315,7 @@
         "id": "uW3vk_W7NSKr"
       },
       "source": [
-        "###Identify sequences with longest ORF length less than or equal to 0\n",
+        "###Count the number of RNA sequences with no ORFs\n",
         "\n",
         "---"
       ]
@@ -343,30 +326,6 @@
         "id": "e_Gw5oEKOzc2"
       },
       "source": [
-        "def identify_sequences_in_max_orf_len_threshold(data, max_orf_len_threshold):\n",
-        "  oc = ORF_counter()\n",
-        "  for i in range(0, len(data)):\n",
-        "    seq = data.iloc[i]\n",
-        "    if len(seq['sequence']) > 200: #ensure sequences are greater than 200\n",
-        "      oc.set_sequence(seq['sequence'])\n",
-        "      max_orf_len = oc.get_max_orf_len()\n",
-        "      if max_orf_len <= max_orf_len_threshold:\n",
-        "        print(seq)\n",
-        "        print(\"Max ORF length =\", max_orf_len)\n",
-        "        print()\n",
-        "\n",
-        "def count_sequences_in_max_orf_len_threshold(data, max_orf_len_threshold):\n",
-        "  oc = ORF_counter()\n",
-        "  sequences = data['sequence'].tolist()\n",
-        "  count = 0\n",
-        "  for seq in sequences:\n",
-        "    if len(seq) > 200: #ensure sequences are greater than 200\n",
-        "      oc.set_sequence(seq)\n",
-        "      max_orf_len = oc.get_max_orf_len()\n",
-        "      if max_orf_len <= max_orf_len_threshold:\n",
-        "        count+=1\n",
-        "  print(\"Number of sequences with max ORF length within threshold of\", str(max_orf_len_threshold) + \":\", count)\n",
-        "\n",
         "\"\"\"Counts the number of RNA sequences that fit the given constraints.\n",
         "Sequence range constraints are exclusive.\n",
         "Max ORF length constraints are inclusive,\n",
@@ -384,17 +343,8 @@
         "  print(\"Number of sequences with length between the bounds\", min_seq_len, \"and\", max_seq_len, \"with greatest ORF length within bounds of\", min_max_orf_len, \"and\", max_max_orf_len, \"is\", count)\n",
         "\n"
       ],
-      "execution_count": 37,
+      "execution_count": 49,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kfP_rW5nmNCV"
-      },
-      "source": [
-        "Count the number of RNA sequences with no ORFs"
-      ]
     },
     {
       "cell_type": "code",
@@ -403,23 +353,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w7-4WaAuNuMZ",
-        "outputId": "719ba695-d72c-4c12-ecc5-23cb86375dcf"
+        "outputId": "853fd211-90c6-43f8-a6b6-d3ff5ac5f398"
       },
       "source": [
         "print(\"mRNA:\")\n",
         "count_constraint_valid_sequences(pcdf, 200, 12800, 0, 0)\n",
         "print(\"lncRNA:\")\n",
-        "count_constraint_valid_sequences(ncdf, 200, 12800, 0, 0)"
+        "count_constraint_valid_sequences(ncdf, 200, 12800, 0, 0)\n",
+        "show_time()"
       ],
-      "execution_count": 40,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "mRNA:\n",
-            "Number of sequences with length between the bounds 200 and 12800 with greatest ORF length within bounds of 3 and 3 is 69\n",
+            "Number of sequences with length between the bounds 200 and 12800 with greatest ORF length within bounds of 0 and 0 is 653\n",
             "lncRNA:\n",
-            "Number of sequences with length between the bounds 200 and 12800 with greatest ORF length within bounds of 3 and 3 is 20\n"
+            "Number of sequences with length between the bounds 200 and 12800 with greatest ORF length within bounds of 0 and 0 is 153\n",
+            "2021-06-04 15:51:42 UTC\n"
           ],
           "name": "stdout"
         }
@@ -445,7 +397,7 @@
         "def subset_list_by_len_bounds(input_list, min_len, max_len):\n",
         "  return list(filter(lambda x: len(x) > min_len and len(x) < max_len, input_list))"
       ],
-      "execution_count": 12,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -455,7 +407,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "03eoMss5AIop",
-        "outputId": "8b74b25b-6604-4104-f409-ddf21261fc7c"
+        "outputId": "c5d7f3f3-74ec-4ba0-9795-d832197c4d47"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -473,12 +425,12 @@
         "  binned_nc_sequences[i] = subset_list_by_len_bounds(ncdf['sequence'].tolist(), bin[0], bin[1])\n",
         "show_time()"
       ],
-      "execution_count": 13,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-04 14:41:33 UTC\n"
+            "2021-06-04 15:48:57 UTC\n"
           ],
           "name": "stdout"
         }
@@ -502,7 +454,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TMMnTdSiL6RD",
-        "outputId": "608b2f33-9bfe-4448-b098-034fe9520230"
+        "outputId": "1866cc8d-8329-44fe-c35c-3fb8367a86a0"
       },
       "source": [
         "pc_max_len_data = []\n",
@@ -537,12 +489,12 @@
         "    nc_contain_data[bin_num].append(oc.count_contained_orfs())\n",
         "show_time()"
       ],
-      "execution_count": 14,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2021-06-04 14:42:53 UTC\n"
+            "2021-06-04 15:50:17 UTC\n"
           ],
           "name": "stdout"
         }
@@ -568,7 +520,7 @@
         "def mean(data):\n",
         "  return sum(data) / len(data)"
       ],
-      "execution_count": 15,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -601,7 +553,7 @@
         "hm_data.append(mean_nc_max_cnt_data)\n",
         "hm_data.append(mean_nc_contain_data)"
       ],
-      "execution_count": 16,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -656,8 +608,17 @@
         "  \n",
         "  plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": 56,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4rbhxcMvssSX"
+      },
+      "source": [
+        "###Options for plots"
+      ]
     },
     {
       "cell_type": "code",
@@ -665,15 +626,23 @@
         "id": "ky9ytY_6wMpl"
       },
       "source": [
-        "#___Options___\n",
         "#Box plots\n",
         "show_outliers=True\n",
         "y_scale = 'log'\n",
         "y_base = 2\n",
         "#Heatmap"
       ],
-      "execution_count": 24,
+      "execution_count": 57,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "izdNtnH_sl7C"
+      },
+      "source": [
+        "###Generate the plots"
+      ]
     },
     {
       "cell_type": "code",
@@ -683,10 +652,9 @@
           "height": 1000
         },
         "id": "8GzgZJXqTPz1",
-        "outputId": "d6e69fe6-657d-4ecd-9895-1e240dab16db"
+        "outputId": "abfb48e2-f4ab-4049-b1e0-889ab9a2125b"
       },
       "source": [
-        "#___Run the plots___\n",
         "#Generate x-axis labels\n",
         "bp_x_axis_labels = []\n",
         "hm_x_axis_labels = []\n",
@@ -703,12 +671,11 @@
         "plt.show()\n",
         "\n",
         "#Box plots\n",
-        "\n",
         "box_plot_compare(pc_max_len_data, nc_max_len_data, \"Length of Longest ORF in RNA Sequences\", \"Sequence Length Ranges\", \"ORF Length\", bp_x_axis_labels, show_outliers, y_scale, y_base)\n",
         "box_plot_compare(pc_max_cnt_data, nc_max_cnt_data, \"Number of Non-contained ORFs in RNA Sequences\", \"Sequence Length Ranges\", \"Number of Non-contained ORFs\", bp_x_axis_labels, show_outliers, y_scale, y_base)\n",
         "box_plot_compare(pc_contain_data, nc_contain_data, \"Number of Contained ORFs in RNA Sequences\", \"Sequence Length Ranges\", \"Number of Contained ORFs\", bp_x_axis_labels, show_outliers, y_scale, y_base)"
       ],
-      "execution_count": 31,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "display_data",
@@ -814,7 +781,7 @@
       "source": [
         ""
       ],
-      "execution_count": 19,
+      "execution_count": 58,
       "outputs": []
     }
   ]
