Filter mRNA based on UTR on FASTA defline.

--- a/Notebooks/GenCode_Explore_103.ipynb
+++ b/Notebooks/GenCode_Explore_103.ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-06 17:11:17 EDT\n"
+      "2021-06-07 10:47:53 EDT\n"
      ]
     }
    ],
@@ -70,6 +70,8 @@
     "import pandas as pd\n",
     "import gzip\n",
     "import sys\n",
+    "import re\n",
+    "\n",
     "try:\n",
     "    from google.colab import drive\n",
     "    IN_COLAB = True\n",
@@ -133,16 +135,21 @@
     "    ids=[]     # GenCode transcript ID, always starts ENST, excludes version\n",
     "    one_seq = EMPTY\n",
     "    one_id = None\n",
+    "    pattern5=re.compile('.*UTR5:')\n",
+    "    pattern3=re.compile('.*UTR3:')\n",
+    "    has_utr=False\n",
     "    with gzip.open (filename,'rt') as infile:\n",
     "        for line in infile:\n",
     "            if line[0]==DEFLINE:\n",
-    "                if not one_seq == EMPTY and (check_list is None or one_id in check_list):\n",
+    "                if not one_seq == EMPTY and \\\n",
+    "                (check_list is None or one_id in check_list) and has_utr:\n",
     "                    labels.append(label)\n",
     "                    seqs.append(one_seq)\n",
     "                    lens.append(len(one_seq))\n",
     "                    ids.append(one_id)\n",
     "                one_id = line[1:].split(VERSION)[0]\n",
     "                one_seq = EMPTY\n",
+    "                has_utr = not (pattern5.match(line) is None or pattern3.match(line) is None)\n",
     "            else:\n",
     "                # Continue loading sequence lines till next defline.\n",
     "                additional = line.rstrip()\n",
@@ -189,11 +196,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-06 17:11:17 EDT\n",
-      "PC seqs loaded: 60946\n",
-      "2021-06-06 17:11:22 EDT\n",
-      "NC seqs loaded: 48752\n",
-      "2021-06-06 17:11:24 EDT\n"
+      "2021-06-07 10:47:53 EDT\n",
+      "PC seqs loaded: 57076\n",
+      "2021-06-07 10:47:58 EDT\n",
+      "NC seqs loaded: 1\n",
+      "2021-06-07 10:47:59 EDT\n"
      ]
     }
    ],
@@ -272,115 +279,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>659</th>\n",
-       "      <td>ENST00000641727</td>\n",
+       "      <th>0</th>\n",
+       "      <td>ENST00000399966</td>\n",
        "      <td>0</td>\n",
-       "      <td>TTGGGAGGCCGAGTCAGGTGGATCACCTGAGG</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27605</th>\n",
-       "      <td>ENST00000630527</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CCACAATCTTCTGGACAAAGTGGGCCTGGTGAGCATGTGCAGCCTA...</td>\n",
-       "      <td>54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17512</th>\n",
-       "      <td>ENST00000612718</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TTTTTTTTTTTTTTAAAAGTTCAAGTGATTCTCCTGGTTTTCCTCA...</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9805</th>\n",
-       "      <td>ENST00000678483</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TGATCAGGCTGGTCTCGAACACCTGACCTTGTGATCCACCCACCTC...</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9806</th>\n",
-       "      <td>ENST00000679337</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CTGGTCAGGGAGGAGTTTGGAATGTTTCTGGTTGGTGATGTTGTTT...</td>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46918</th>\n",
-       "      <td>ENST00000458178</td>\n",
-       "      <td>0</td>\n",
-       "      <td>GCAGAGCGGAGGAGCAGCAGCTGCCACCGGCCGGAAGCCTGCTGGC...</td>\n",
-       "      <td>37852</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47169</th>\n",
-       "      <td>ENST00000624945</td>\n",
-       "      <td>0</td>\n",
-       "      <td>TGAAGGGGCCAGAGTACTGGCTGCCCTGAAATCAGAGCAGCAGCTA...</td>\n",
-       "      <td>49287</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27601</th>\n",
-       "      <td>ENST00000597346</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AGAACGGTCGCCGCGTCGCCTCAGCACGGACCTCCAGGGAGCTCCT...</td>\n",
-       "      <td>91667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31002</th>\n",
-       "      <td>ENST00000626826</td>\n",
-       "      <td>0</td>\n",
-       "      <td>GGAAGGAGCAATAACTGATTTTTCTGCAGTGTCTTCCTTCTGAAAG...</td>\n",
-       "      <td>205012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48318</th>\n",
-       "      <td>ENST00000674361</td>\n",
-       "      <td>0</td>\n",
-       "      <td>AACATTTGAGTCAGTGTGCTAAGGAAGGCAGATCCACCCTTAATCT...</td>\n",
-       "      <td>347561</td>\n",
+       "      <td>CGGCAGTCACTTTGCGGCCACTATGAGGACTGAGCTTCCTCTCCCC...</td>\n",
+       "      <td>1054</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>48752 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   tid  class  \\\n",
-       "659    ENST00000641727      0   \n",
-       "27605  ENST00000630527      0   \n",
-       "17512  ENST00000612718      0   \n",
-       "9805   ENST00000678483      0   \n",
-       "9806   ENST00000679337      0   \n",
-       "...                ...    ...   \n",
-       "46918  ENST00000458178      0   \n",
-       "47169  ENST00000624945      0   \n",
-       "27601  ENST00000597346      0   \n",
-       "31002  ENST00000626826      0   \n",
-       "48318  ENST00000674361      0   \n",
+       "               tid  class                                           sequence  \\\n",
+       "0  ENST00000399966      0  CGGCAGTCACTTTGCGGCCACTATGAGGACTGAGCTTCCTCTCCCC...   \n",
        "\n",
-       "                                                sequence  seqlen  \n",
-       "659                     TTGGGAGGCCGAGTCAGGTGGATCACCTGAGG      32  \n",
-       "27605  CCACAATCTTCTGGACAAAGTGGGCCTGGTGAGCATGTGCAGCCTA...      54  \n",
-       "17512  TTTTTTTTTTTTTTAAAAGTTCAAGTGATTCTCCTGGTTTTCCTCA...      60  \n",
-       "9805   TGATCAGGCTGGTCTCGAACACCTGACCTTGTGATCCACCCACCTC...      60  \n",
-       "9806   CTGGTCAGGGAGGAGTTTGGAATGTTTCTGGTTGGTGATGTTGTTT...      61  \n",
-       "...                                                  ...     ...  \n",
-       "46918  GCAGAGCGGAGGAGCAGCAGCTGCCACCGGCCGGAAGCCTGCTGGC...   37852  \n",
-       "47169  TGAAGGGGCCAGAGTACTGGCTGCCCTGAAATCAGAGCAGCAGCTA...   49287  \n",
-       "27601  AGAACGGTCGCCGCGTCGCCTCAGCACGGACCTCCAGGGAGCTCCT...   91667  \n",
-       "31002  GGAAGGAGCAATAACTGATTTTTCTGCAGTGTCTTCCTTCTGAAAG...  205012  \n",
-       "48318  AACATTTGAGTCAGTGTGCTAAGGAAGGCAGATCCACCCTTAATCT...  347561  \n",
-       "\n",
-       "[48752 rows x 4 columns]"
+       "   seqlen  \n",
+       "0    1054  "
       ]
      },
      "execution_count": 7,
@@ -403,41 +317,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ENST00000629223 len=210 orf=0\n",
-      "ENST00000640179 len=210 orf=24\n",
-      "ENST00000638826 len=219 orf=0\n",
-      "ENST00000612485 len=225 orf=42\n",
-      "ENST00000640713 len=231 orf=42\n",
-      "ENST00000640869 len=237 orf=27\n",
-      "ENST00000638397 len=240 orf=0\n",
-      "ENST00000639871 len=243 orf=0\n",
-      "ENST00000548367 len=249 orf=0\n",
-      "ENST00000626868 len=249 orf=0\n",
-      "ENST00000618832 len=282 orf=0\n",
-      "ENST00000532589 len=331 orf=27\n",
-      "ENST00000640154 len=336 orf=15\n",
-      "ENST00000634235 len=351 orf=0\n",
-      "ENST00000635603 len=369 orf=0\n",
-      "ENST00000639772 len=421 orf=30\n",
-      "ENST00000515402 len=448 orf=30\n",
-      "ENST00000330910 len=468 orf=42\n",
-      "ENST00000613578 len=486 orf=27\n",
-      "ENST00000437752 len=525 orf=36\n",
-      "ENST00000528262 len=560 orf=27\n",
-      "ENST00000619146 len=561 orf=24\n",
+      "...up to position 0\n",
       "ENST00000534683 len=562 orf=42\n",
-      "ENST00000640148 len=596 orf=12\n",
-      "ENST00000621530 len=617 orf=39\n",
-      "ENST00000614767 len=762 orf=0\n",
-      "ENST00000639555 len=878 orf=0\n",
-      "ENST00000641094 len=1476 orf=0\n"
+      "...up to position 10000\n",
+      "...up to position 20000\n",
+      "...up to position 30000\n",
+      "...up to position 40000\n",
+      "...up to position 50000\n",
+      "done\n"
      ]
     }
    ],
@@ -454,7 +348,9 @@
     "        if seqlen>200 and orflen<=TOO_SHORT:\n",
     "            seqid=df.iloc[pos]['tid']\n",
     "            print(\"%s len=%d orf=%d\"%(seqid,seqlen,orflen))\n",
-    "\n",
+    "        if pos%10000==0:\n",
+    "            print(\"...up to position\",pos)\n",
+    "    print(\"done\")\n",
     "TOO_SHORT=50\n",
     "show_short(pcdf,TOO_SHORT)\n"
    ]
