Filter protein coding without the GFF.

--- a/Notebooks/GenCode_Explore_105.ipynb
+++ b/Notebooks/GenCode_Explore_105.ipynb
@@ -13,7 +13,7 @@
     "Assume user downloaded files from GenCode 38 [FTP](http://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_38/)\n",
     "to a subdirectory called data.\n",
     "\n",
-    "In 103, we reduced the PC mRNA to a set where none lacked ORFs. Here, determine whether all those filters were actually necessary. Also engineer the code."
+    "In 104, we showed that we can do away with the protein-include file based on annotation.gff and just rely on the presence of UTR in the FASTA deflines. Here, stop importing the protein-include file."
    ]
   },
   {
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-07 16:28:32 EDT\n"
+      "2021-06-07 17:53:29 EDT\n"
      ]
     }
    ],
@@ -82,12 +82,8 @@
     "    s = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/RNA_describe.py')\n",
     "    with open('RNA_describe.py', 'w') as f:\n",
     "        f.write(s.text)  # writes to cloud local, delete the file later?\n",
-    "    s = requests.get('https://raw.githubusercontent.com/ShepherdCode/Soars2021/master/SimTools/GenCode_Protein_Include.py')\n",
-    "    with open('GenCode_Protein_Include', 'w') as f:\n",
-    "        f.write(s.text)  # writes to cloud local, delete the file later?\n",
     "    from RNA_describe import ORF_counter\n",
     "    from RNA_describe import assert_imported_RNA_describe\n",
-    "    from GenCode_preprocess import prot_incl\n",
     "except:\n",
     "    print(\"CoLab not working. On my PC, use relative paths.\")\n",
     "    IN_COLAB = False\n",
@@ -95,7 +91,6 @@
     "    sys.path.append(\"..\") # append parent dir in order to use sibling dirs\n",
     "    from SimTools.RNA_describe import ORF_counter\n",
     "    from SimTools.RNA_describe import assert_imported_RNA_describe\n",
-    "    from SimTools.GenCode_Protein_Include import prot_incl\n",
     "\n",
     "MODELPATH=\"BestModel\"  # saved on cloud instance and lost after logout\n",
     "#MODELPATH=DATAPATH+MODELPATH  # saved on Google Drive but requires login\n",
@@ -196,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -209,11 +204,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-07 16:39:08 EDT\n",
+      "2021-06-07 17:53:30 EDT\n",
       "PC seqs loaded: 70825\n",
-      "2021-06-07 16:39:13 EDT\n",
+      "2021-06-07 17:53:35 EDT\n",
       "NC seqs loaded: 48752\n",
-      "2021-06-07 16:39:14 EDT\n"
+      "2021-06-07 17:53:36 EDT\n"
      ]
     }
    ],
@@ -225,8 +220,7 @@
     "loader=GenCodeLoader()\n",
     "show_time()\n",
     "loader.set_label(1)\n",
-    "loader.set_check_list(prot_incl)\n",
-    "loader.set_check_list(None)  # just for testing!\n",
+    "loader.set_check_list(None) \n",
     "loader.set_check_utr(True)\n",
     "pcdf=loader.load_file(PC_FULLPATH)\n",
     "print(\"PC seqs loaded:\",len(pcdf))\n",
@@ -241,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -268,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +405,7 @@
        "[48752 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,22 +425,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Up to position 0, we have 0 shorter than 30\n",
-      "Up to position 10000, we have 0 shorter than 30\n",
-      "Up to position 20000, we have 0 shorter than 30\n",
-      "Up to position 30000, we have 0 shorter than 30\n",
-      "Up to position 40000, we have 0 shorter than 30\n",
-      "Up to position 50000, we have 0 shorter than 30\n",
-      "Up to position 60000, we have 0 shorter than 30\n",
-      "Up to position 70000, we have 0 shorter than 30\n",
-      "After all 70825, we have 0 shorter than 30\n"
+      "Up to position 0, we have 0 shorter than 60\n",
+      "Up to position 10000, we have 8 shorter than 60\n",
+      "Up to position 20000, we have 8 shorter than 60\n",
+      "Up to position 30000, we have 8 shorter than 60\n",
+      "Up to position 40000, we have 8 shorter than 60\n",
+      "Up to position 50000, we have 8 shorter than 60\n",
+      "Up to position 60000, we have 8 shorter than 60\n",
+      "Up to position 70000, we have 8 shorter than 60\n",
+      "After all 70825, we have 8 shorter than 60\n"
      ]
     }
    ],
@@ -468,30 +462,30 @@
     "        if pos%10000==0:\n",
     "            print(\"Up to position %d, we have %d shorter than %d\"%(pos,shorties,too_short))\n",
     "    print(\"After all %d, we have %d shorter than %d\"%(count,shorties,too_short))\n",
-    "TOO_SHORT=30\n",
-    "show_short(pcdf,TOO_SHORT)\n"
+    "TOO_SHORT=60\n",
+    "show_short(pcdf,TOO_SHORT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Up to position 0, we have 0 shorter than 30\n",
-      "Up to position 10000, we have 504 shorter than 30\n",
-      "Up to position 20000, we have 584 shorter than 30\n",
-      "Up to position 30000, we have 589 shorter than 30\n",
-      "Up to position 40000, we have 589 shorter than 30\n",
-      "After all 48752, we have 589 shorter than 30\n"
+      "Up to position 0, we have 0 shorter than 60\n",
+      "Up to position 10000, we have 1520 shorter than 60\n",
+      "Up to position 20000, we have 1930 shorter than 60\n",
+      "Up to position 30000, we have 2002 shorter than 60\n",
+      "Up to position 40000, we have 2012 shorter than 60\n",
+      "After all 48752, we have 2012 shorter than 60\n"
      ]
     }
    ],
    "source": [
-    "show_short(ncdf,TOO_SHORT)\n"
+    "show_short(ncdf,TOO_SHORT)"
    ]
   },
   {
